fixed form, profile pic, and text alignment

--- a/site.css
+++ b/site.css
@@ -33,14 +33,16 @@ a {
 
 .nav-menu {
     display: flex;
-    align-content: center;
-    gap: 70px;
+    flex-direction: row;
+    text-align: center;
+    margin-right: 8%;
     margin-top: 2rem;
 }
 
 .nameOfSite {
     display: flex;
-    align-content: center;
+    flex-direction: column;
+    text-align: center;
     font-size: 4rem;
 
 }
@@ -90,17 +92,17 @@ a {
 .boxProfileText {
     display: flex;
     flex-direction: column;
-    align-content: center;
     justify-content: center;
+    text-align: center;
     padding-top: 1rem;
     padding-bottom: 1rem;
     padding-right: 3rem;
+    margin-left: 5rem;
 }
 
 .boxProfileText>h1 {
-    display: flex;
-
     padding-bottom: .5rem;
+    text-align: center;
 }
 
 .boxProfileImage>img {
@@ -109,14 +111,15 @@ a {
     border-color: rgb(24, 30, 37);
     border-width: .75rem;
     border-radius: 50%;
+    min-width: 200px;
 }
 
 body {
     background-image: url(images/mobileTabletbackground.png);
 }
 
-/* Allows interactive hamburger menu to appear, and disappear when either the menu or menu items are clicked */
-@media(max-width:480px) {
+/* Animates hamburger menu when clicked, and brings out a nav menu from the left */
+@media(max-width:767px) {
     .navbar {
         display: flex;
         flex-direction: row;
@@ -128,7 +131,7 @@ body {
 
     .hamburger {
         display: block;
-        align-self: flex-end;
+        margin-left: 10px;
     }
 
     .hamburger:hover {
@@ -150,7 +153,7 @@ body {
     .nav-menu {
         position: fixed;
         left: -100%;
-        top: 3.5rem;
+        top: 5.5rem;
         flex-direction: column;
         background-color: rgb(24, 30, 37);
         width: 93%;
@@ -178,7 +181,6 @@ body {
 
     .boxProfileImage {
         display: flex;
-        object-fit: scale-down;
         justify-content: center;
         align-content: center;
         padding-top: 1rem;
@@ -187,20 +189,19 @@ body {
 
     .boxProfileText {
         display: flex;
-        padding-left: 3rem;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 2rem;
     }
 }
 
 h2 {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    text-align: center;
     color: azure;
     font-size: 3rem;
     background-color: rgb(77, 97, 119, .5);
-    margin-left: 2.5%;
-    margin-right: 2.5%;
     border-style: outset;
     border-width: 10px;
     border-color: black;
@@ -230,8 +231,8 @@ main>div {
 #contactForm {
     width: 40%;
     height: 450px;
-    margin-top: 350px;
-    margin-left: 20%;
+    margin-top: 75px;
+    margin-left: 30%;
     position: relative;
 }
 
@@ -240,20 +241,9 @@ main>div {
 }
 
 #subject {
-    width: 27%;
+    width: 35%;
 }
 
 label {
     color: azure;
 }
-
-#validate {
-    display: flex;
-    justify-self: center;
-}
-
-#result {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin-top: 10px;
